--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,31 +1,48 @@
 [project]
 name = "app"
 version = "0.1.0"
-description = ""
+description = "Appointment Agent - A Calendly-like application"
 authors = [
-    {name = "Your Name", email = "you@example.com"}
+    {name = "Your Name", email = "your.email@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.8.1"
 dependencies = [
-    "fastapi>=0.111.0",
-    "uvicorn>=0.30.1",
-    "sqlalchemy>=2.0.30",
-    "psycopg2-binary>=2.9.9",
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "sqlalchemy>=2.0.0",
+    "psycopg2-binary>=2.9.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
-    "python-multipart>=0.0.9",
-    "jinja2>=3.1.4",
-    "httpx>=0.27.0",
-    "pytest>=8.2.2",
-    "python-dotenv>=1.0.1",
-    "google-api-python-client>=2.127.0",
-    "google-auth-httplib2>=0.2.0",
+    "python-multipart>=0.0.6",
+    "jinja2>=3.1.0",
+    "aiofiles>=23.0.0",
     "google-auth-oauthlib",
-    "email-validator",
+    "google-api-python-client",
+    "google-auth-httplib2",
     "requests",
+    "email-validator",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "flake8>=6.0.0",
 ]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.black]
+line-length = 88
+target-version = ['py38']
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
