feat: Complete landing page redesign with centered AI demo
- Redesigned hero section with centered layout
- Added interactive AI demo card with animations
- Implemented responsive design with equal spacing
- Enhanced visual hierarchy and modern UI elements
- Added hover effects and smooth transitions
- Improved mobile responsiveness
- Centered both content and demo sections with max-width container

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,10 @@ dependencies = [
     "google-auth-httplib2",
     "requests",
     "email-validator",
+    "openai>=1.97.1",
+    "anthropic>=0.59.0",
+    "langchain>=0.2.17",
+    "langchain-openai>=0.1.25",
 ]
 
 [project.optional-dependencies]
