feat: Complete booking system with smooth UI/UX flow
- Added new all-in-one booking template with improved layout
- Implemented automatic flow with 1-second loaders for date/time selection
- Removed Continue button from time selection for smoother UX
- Added blue loader overlay near submit button
- Integrated real backend functionality (calendar events, email notifications)
- Fixed timezone handling for global users
- Added proper error handling and loading states
- Improved overall UI with better styling and transitions

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "anthropic>=0.59.0",
     "langchain>=0.2.17",
     "langchain-openai>=0.1.25",
+    "pytz>=2025.2",
 ]
 
 [project.optional-dependencies]
