--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -51,3 +51,10 @@ target-version = ['py38']
 [tool.isort]
 profile = "black"
 multi_line_output = 3
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.24.0",
+]
